--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,10 @@
     <footer>
 
     </footer>
-    <script src="resources/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="./resources/js/index.js"></script>
 </body>
 
 </html>
