separating the creation and voting into 2 pages

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
         <section id="vote">
             <h2>Vote</h2>
         </section>
+        <section id="pollLink">
+            <h2>Share this link for voting</h2>
+        </section>
         <section id="createPoll">
             <h2>Create Poll</h2>
             <label for="question">What are we voting on?</label>
