--- a/public/vote.html
+++ b/public/vote.html
@@ -17,11 +17,120 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Vote</h1>
+            <h1 class="display-4">Weight Vote</h1>
             <p class="lead">Use resistance voting to help make better decisions.</p>
         </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <div id="vote">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <script src="./public/resources/js/vote.js"></script> -->
+    <script>
+        function createButton(id, innerText) {
+            var button = document.createElement("button");
+            button.setAttribute("id", id);
+            button.setAttribute("type", "button");
+            button.innerText = innerText;
+            return button;
+        }
+
+        function createButtonGroup(option) {
+            var buttonGroup = document.createElement("div");
+            buttonGroup.setAttribute("id", option.split(" ").join("XoX"));
+            buttonGroup.setAttribute("class", "buttonGroup");
+            var bestButton = createButton(`bestButton`, "No Resistance");
+            // var goodButton = createButton(`goodButton`, "Good");
+            var neutralButton = createButton(`neutralButton`, "Some Resistance");
+            // var badButton = createButton(`badButton`, "Bad");
+            var worstButton = createButton(`worstButton`, "Maximum Resistance");
+            buttonGroup.appendChild(bestButton);
+            // buttonGroup.appendChild(goodButton);
+            buttonGroup.appendChild(neutralButton);
+            // buttonGroup.appendChild(badButton);
+            buttonGroup.appendChild(worstButton);
+            return buttonGroup;
+        }
+
+        function createOption(heading) {
+            var option = document.createElement("div");
+            var title = document.createElement("h3");
+            title.innerText = heading;
+            var buttons = createButtonGroup(heading);
+            option.appendChild(buttons);
+            $("#vote").append(title);
+            $("#vote").append(option);
+        }
+
+        function removeButtons(event) {
+            var parent = event.target.parentElement;
+            console.log(event.target.parentElement.id);
+            parent.removeChild(parent.childNodes[0]);
+            parent.removeChild(parent.childNodes[0]);
+            parent.removeChild(parent.childNodes[0]);
+            //    parent.removeChild(parent.childNodes[0]);
+            //    parent.removeChild(parent.childNodes[0]);
+            //section to replace buttons with text showing what your vote was
+            //had issues making this its own function so put it here
+            var newText = "";
+            switch (event.target.id) {
+                case "bestButton":
+                    newText = "No Resistance";
+                    break;
+                case "goodButton":
+                    newText = "Good";
+                    break;
+                case "neutralButton":
+                    newText = "Some Resistance";
+                    break;
+                case "badButton":
+                    newText = "Bad";
+                    break;
+                case "worstButton":
+                    newText = "Maximum Resistance";
+                    break;
+                default:
+                    newText = "";
+                    break;
+            }
+            var vote = document.createElement("p");
+            vote.innerText = newText;
+            parent.appendChild(vote);
+        }
+        var url = window.location.pathname;
+        var id = url.substring(url.lastIndexOf('/') + 1);
+        console.log(id);
+        $.get(`/api/questions/${id}`, function (data) {
+            var questionInput = data.question
+            var questionPop = document.createElement("h3");
+            questionPop.innerText = questionInput;
+            $("#vote").append(questionPop);
+            $.get(`/api/options/${data.id}`, function (options) {
+                console.log(options);
+                for (var i = 0; i < options.length; i++) {
+                    createOption(options[i].option);
+                }
+            })
+            console.log(data);
+        })
+
+        // on click event for the buttons created in the vote div
+        $("#vote").on("click", "button", function (event) {
+            if (event.target.id === "submitChoices") {
+                console.log("Its working!");
+            } else {
+                removeButtons(event);
+                // showVote(event);
+            }
+        })
+    </script>
 </body>
 
 </html>
