--- a/public/vote.html
+++ b/public/vote.html
@@ -30,6 +30,16 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <div id="Results">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- <script src="./public/resources/js/vote.js"></script> -->
@@ -42,9 +52,9 @@
             return button;
         }
 
-        function createButtonGroup(option) {
+        function createButtonGroup(option, id) {
             var buttonGroup = document.createElement("div");
-            buttonGroup.setAttribute("id", option.split(" ").join("XoX"));
+            buttonGroup.setAttribute("id", id);
             buttonGroup.setAttribute("class", "buttonGroup");
             var bestButton = createButton(`bestButton`, "No Resistance");
             // var goodButton = createButton(`goodButton`, "Good");
@@ -59,17 +69,18 @@
             return buttonGroup;
         }
 
-        function createOption(heading) {
+        function createOption(heading, id) {
             var option = document.createElement("div");
             var title = document.createElement("h3");
             title.innerText = heading;
-            var buttons = createButtonGroup(heading);
+            var buttons = createButtonGroup(heading, id);
             option.appendChild(buttons);
             $("#vote").append(title);
             $("#vote").append(option);
         }
 
         function removeButtons(event) {
+            var optionId = event.originalEvent.path[1].id;
             var parent = event.target.parentElement;
             console.log(event.target.parentElement.id);
             parent.removeChild(parent.childNodes[0]);
@@ -83,26 +94,53 @@
             switch (event.target.id) {
                 case "bestButton":
                     newText = "No Resistance";
+                    $.post("/api/votes", {
+                        vote: newText,
+                        value: 0,
+                        optionId: optionId
+                    }).then(function (result) {
+                        var vote = document.createElement("p");
+                        vote.innerText = newText;
+                        parent.appendChild(vote);
+                    });
                     break;
                 case "goodButton":
                     newText = "Good";
                     break;
                 case "neutralButton":
                     newText = "Some Resistance";
+                    $.post("/api/votes", {
+                        vote: newText,
+                        value: 3,
+                        optionId: optionId
+                    }).then(function (result) {
+                        var vote = document.createElement("p");
+                        vote.innerText = newText;
+                        parent.appendChild(vote);
+                    });
                     break;
                 case "badButton":
                     newText = "Bad";
                     break;
                 case "worstButton":
                     newText = "Maximum Resistance";
+                    $.post("/api/votes", {
+                        vote: newText,
+                        value: 5,
+                        optionId: optionId
+                    }).then(function (result) {
+                        var vote = document.createElement("p");
+                        vote.innerText = newText;
+                        parent.appendChild(vote);
+                    });
                     break;
                 default:
                     newText = "";
                     break;
             }
-            var vote = document.createElement("p");
-            vote.innerText = newText;
-            parent.appendChild(vote);
+            // var vote = document.createElement("p");
+            // vote.innerText = newText;
+            // parent.appendChild(vote);
         }
         var url = window.location.pathname;
         var id = url.substring(url.lastIndexOf('/') + 1);
@@ -115,7 +153,7 @@
             $.get(`/api/options/${data.id}`, function (options) {
                 console.log(options);
                 for (var i = 0; i < options.length; i++) {
-                    createOption(options[i].option);
+                    createOption(options[i].option, options[i].id);
                 }
             })
             console.log(data);
