--- a/public/vote.html
+++ b/public/vote.html
@@ -33,8 +33,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md">
-                <div id="Results">
-
+                <div id="results">
+                    <button type="button" class="btn btn-primary" id="seeResults">See Results</button>
                 </div>
             </div>
         </div>
@@ -159,14 +159,35 @@
             console.log(data);
         })
 
+        //function to show results on the page
+        function seeResults (event) {
+            console.log(id);
+            $.get(`/api/options/${id}`, function(data){
+                for (var i = 0; i < data.length; i++){
+                    var score = 0;
+                    $.get(`/api/votes/${data[i].id}`, function (votes){
+                        for (var x = 0; x < votes.length; x++){
+                            score += votes[x].value;
+                            console.log(votes[x].value);
+                            console.log(score);
+                        }
+                    })
+                }
+            })
+        }
+
         // on click event for the buttons created in the vote div
         $("#vote").on("click", "button", function (event) {
             if (event.target.id === "submitChoices") {
-                console.log("Its working!");
+                
             } else {
                 removeButtons(event);
                 // showVote(event);
             }
+        })
+
+        $("#results").on("click", "button", function (event) {
+            seeResults(event);
         })
     </script>
 </body>
